maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:62: error: type mismatch;
 found   : Int
 required: Boolean
					if(getIndication(i,j))
                                                        ^